<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/appbar"
        layout="@layout/view_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Country/Region Section -->
            <TextView
                android:id="@+id/country_region_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_region"
                android:textColor="#000000"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/country_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_live_pk"
                android:backgroundTint="@color/gray2"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_country"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginHorizontal="9dp"
                    android:src="@drawable/ic_arrow_right_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Contact Information Section -->
            <TextView
                android:id="@+id/contact_information_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact_information"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/first_name"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/last_name"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                >
                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"/>
                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="8dp" />
            </LinearLayout>

            <!-- Address Section -->
            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/zipcode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/zipcode"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/zipcode_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/zip_code"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/house_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/house_number"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/house_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/house_number_"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/address_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address_additional_fields"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/full_address"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/city_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/enter_city"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/street_apartment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/street_amp_apartment"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/street_apartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_common_05"
                android:backgroundTint="@color/gray2"
                android:hint="@string/street_apartment"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:textSize="12sp" />


            <!-- Default Shipping Address Toggle -->

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FF0000"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


